force-app/main/default/objects/simpli_lv__List_View_Error__c/simpli_lv__List_View_Error__c.object-meta.xml
<CustomObject>
    <label>List View Log</label>
    <nameField>
        <displayFormat>LVE-{0}</displayFormat>
        <label>List View Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>List View Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>