force-app/main/default/objects/simpli_lv__List_View_Error__c/fields/simpli_lv__Message__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Message__c</fullName>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>