force-app/main/default/objects/simpli_lv__List_View_Error__c/fields/simpli_lv__Running_User__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Running_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The running user at the time of the error.</description>
    <inlineHelpText>The running user at the time of the error.</inlineHelpText>
    <label>Running User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>List_View_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>