force-app/main/default/objects/simpli_lv__List_View_Error__c/fields/simpli_lv__Subtype__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Subtype__c</fullName>
    <label>Subtype</label>
    <length>255</length>
    <type>Text</type>
</CustomField>