force-app/main/default/objects/simpli_lv__List_View_Error__c/fields/simpli_lv__Type__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exception</fullName>
            </value>
            <value>
                <fullName>Log</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>