force-app/main/default/objects/simpli_lv__List_View_Error__c/listViews/simpli_lv__All.listView-meta.xml
<ListView>
    <fullName>simpli_lv__All</fullName>
    <columns>NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>simpli_lv__Running_User__c</columns>
    <columns>simpli_lv__Type__c</columns>
    <columns>simpli_lv__Subtype__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>