force-app/main/default/objects/simpli_lv__List_View_Error__c/listViews/simpli_lv__All_Logging_Today.listView-meta.xml
<ListView>
    <fullName>simpli_lv__All_Logging_Today</fullName>
    <columns>NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>simpli_lv__Running_User__c</columns>
    <columns>simpli_lv__Type__c</columns>
    <columns>simpli_lv__Subtype__c</columns>
    <columns>simpli_lv__Message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>simpli_lv__Type__c</field>
        <operation>equals</operation>
        <value>Log</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>All Logging (Today)</label>
</ListView>